Update to JDK 25
and JDK 25 language idioms